--- a/.gitignore
+++ b/.gitignore
@@ -30,3 +30,17 @@
 *.exe
 *.out
 *.app
+
+# Visual Studio
+*.vs
+.vs/
+*.VC.db
+*.VC.opendb
+.suo
+.user
+.VC.db
+.ipch/
+
+# build folders
+build/
+out/
