Centralized Texture Management to AssetManager Class + nlohmann JSON dependency

--- a/Bullet Hell Game/CMakeLists.txt
+++ b/Bullet Hell Game/CMakeLists.txt
@@ -62,6 +62,16 @@ target_include_directories(rlimgui INTERFACE ${rlimgui_SOURCE_DIR})
 
 target_link_libraries(rlimgui PRIVATE imgui raylib)
 
+# Adding nlohmann/json ----------------------------------------------------------------------
+FetchContent_Declare(
+    nlohmann_json
+    GIT_REPOSITORY "https://github.com/nlohmann/json.git"
+    GIT_TAG "v3.12.0"
+    GIT_PROGRESS TRUE
+)
+
+FetchContent_MakeAvailable(nlohmann_json)
+
 # Adding our source files
 file(GLOB_RECURSE PROJECT_SOURCES CONFIGURE_DEPENDS "${CMAKE_CURRENT_LIST_DIR}/src/*.cpp") # Define PROJECT_SOURCES as a list of all source files
 set(PROJECT_INCLUDE "${CMAKE_CURRENT_LIST_DIR}/include/") # Define PROJECT_INCLUDE to be the path to the include directory of the project
@@ -71,7 +81,7 @@ add_executable(${PROJECT_NAME} main.cpp)
 target_sources(${PROJECT_NAME} PRIVATE ${PROJECT_SOURCES})
 target_include_directories(${PROJECT_NAME} PRIVATE ${PROJECT_INCLUDE})
 
-target_link_libraries(${PROJECT_NAME} PRIVATE imgui raylib rlimgui)
+target_link_libraries(${PROJECT_NAME} PRIVATE imgui raylib rlimgui nlohmann_json::nlohmann_json)
 
 # Setting ASSETS_PATH
 target_compile_definitions(${PROJECT_NAME} PUBLIC ASSETS_PATH="${CMAKE_CURRENT_SOURCE_DIR}/assets/") # Set the asset path macro to the absolute path on the dev machine
